<resources>
    <string name="app_name">美甲大咖</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 弹框下方按钮 确定和取消-->
    <string name="sureButtonText">确定</string>
    <string name="cancelButtonText">取消</string>

    <!-- 搜索页面 -->
    <string name="search_text">搜索</string>
    <string name="search_tip">搜索 标签/内容/老师</string>
    <string name="no_relate_video">暂无相关视频</string>

    <!-- 主题详情 -->
    <string name="video_play_times">%1$s次播放</string>
    <string name="topic_image_text_content">图文分解</string>
    <string name="hide_topic_image_text_content">收起图文</string>
    <string name="download_topic_image_text_content">下载图文到本地</string>
    <string name="more_videos">更多视频</string>
    <string name="video_used_product">使用产品</string>
    <string name="download">下载</string>
    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="submitted_homework">交作业</string>
    <string name="reply">回复</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="abnormal_exit_program">抱歉，程序出现异常，即将退出。</string>
    <string name="back">返回</string>
    <string name="share">分享</string>
    <string name="loading_finish">已经全部加载完毕</string>
    <string name="submitted">提交</string>
    <string name="write_down_your_learning_experience">写下你的学习心得</string>
    <string name="like">喜欢</string>
    <string name="topic_comment_count">评论数 %1$s</string>
    <string name="saving_photos">正在保存图片</string>
    <string name="no_topic_image_text_info">暂无图文信息</string>
    <string name="download_topic_image_text_index">保存了第%1$s张</string>
    <string name="save_topic_image_text_success">整套图片已保存到相册</string>
    <string name="homework_waiting_for_reviews">已有%1$s名同学提交了作业等待大咖点评</string>
    <string name="video_play_not_wifi_tips2">继续播放可能产生流量费用</string>
    <string name="video_play_not_wifi_tips1">您正在使用非Wi-Fi网络</string>
    <string name="continue_to_play">继续播放</string>
    <string name="continue_to_download">是否继续下载</string>
    <string name="video_has_been_cached">%1$s视频已缓存</string>
    <string name="add_video_download">成功添加至 我的 -> 已下载</string>
    <string name="add_topic_collection">成功添加至 我的 -> 已收藏</string>
    <string name="operation_fail">操作失败，请稍后重试</string>
    <string name="submitted_comment_fail">提交评论失败，请稍后重试</string>
    <string name="submitted_homework_fail">交作业失败，请稍后重试</string>
    <string name="topic_share_title">月薪10000+的美甲师都在看</string>
    <string name="topic_share_content">美甲大咖App热播教学视频%1$s</string>
    <string name="topic_empty_comment_tips">暂无评论，来抢沙发吧~</string>
    <string name="network_connect_fail">网络不给力哦，请稍后重试</string>
    <string name="topic_comment_count_0">评论数 0</string>

    <string name="topic_shopping_helper">购物帮助</string>
    <string name="order_finish_headertext">完成订单！</string>
    <string name="order_finish_text">请在淘宝查看订单详情和发货进度</string>


    <!-- about me -->
    <string name="about_me_my">我的</string>
    <string name="about_me_name">昵称</string>
    <string name="about_me_identity">身份</string>
    <string name="level">等级</string>
    <string name="about_me_level">lv0</string>
    <string name="about_me_attention">关注</string>
    <string name="my_follow_list">我的关注</string>
    <string name="about_me_attention_count">0</string>
    <string name="about_me_fans">粉丝</string>
    <string name="my_fans_list">我的粉丝</string>
    <string name="about_me_fans_count">0</string>
    <string name="about_me_ka_bi">咖币</string>
    <string name="about_me_ka_bi_count">0</string>
    <string name="about_me_message">消息</string>
    <string name="about_me_message_count">0</string>
    <string name="about_me_person_info">个人资料</string>
    <string name="about_me_collect">收藏</string>
    <string name="about_me_downloaded">已下载</string>
    <string name="downloaded_no_video">还没有下载视频</string>
    <string name="downloaded_no_video_description">下载视频可以随时观看，不用担心流量</string>
    <string name="about_me_my_require_lesson">我的求教程</string>
    <string name="about_me_give_us_advice">给我们提意见</string>
    <string name="about_me_share">分享美甲大咖给朋友</string>
    <string name="about_me_setting">设置</string>
    <string name="teacher">老师</string>
    <string name="ka_you">咖友</string>
    <string name="delete">删除</string>
    <string name="delete_video_confirm">是否删除下载任务及下载的文件?</string>
    <string name="no_video_found">没有找到视频文件，可能文件已经被删除</string>

    <!-- 修改资料界面-->
    <string name="edit_person_info">修改资料</string>
    <string name="person_info_photo">头像</string>
    <string name="person_info_name">昵称</string>
    <string name="person_info_identity">身份</string>
    <string name="person_info_introduction">个人介绍</string>
    <string name="person_info_update_fail">个人资料更新失败，请重试</string>
    <string name="person_info_update_succeed">个人资料更新成功</string>
    <string name="person_info_name_tips">昵称不能超过八个字哦~</string>
    <string name="setting_person_info_show_tips">正在重置个人资料...</string>

    <!-- 求教程-->
    <string name="di">第</string>
    <string name="qi">期</string>
    <string name="just_now">刚刚</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="before">前</string>
    <string name="stage1_count_down">本期求教程结束时间还剩</string>
    <string name="stage2_count_down">大咖视频制作中，离出炉时间还剩</string>
    <string name="upload_description">上传想要学习的作品，截止之前票数最高的则由老师录制视频教你学哦~！</string>
    <string name="require_lession">求教程</string>
    <string name="vote">投票</string>
    <string name="voted">已投</string>
    <string name="ranking">排行榜</string>
    <string name="vote_count">票数:</string>
    <string name="canvass">拉票</string>
    <string name="lession_collection">合集</string>
    <string name="lession_collection_title">求教程合集</string>
    <string name="vote_success">投票成功</string>
    <string name="vote_failed">投票失败, 请稍后再试...</string>
    <string name="lession_share_title">来美甲大咖App，订制你想要的教学视频</string>
    <string name="lession_share_context">我正在美甲大咖求视频教程，快来给我投票吧！</string>

    <string name="from_camera">拍照</string>
    <string name="from_library">从手机相册中挑选</string>
    <string name="save_to_library">保存到相册</string>
    <string name="report_illegal">举报</string>
    <string name="cancel">取消</string>
    <string name="select_image">选择图片</string>
    <string name="network_disconnected">网络连接不可用</string>
    <string name="upload_image_success">上传图片成功</string>
    <string name="upload_image_failed">上传图片失败, 请稍后再试...</string>
    <string name="query_failed">查询失败, 请稍后再试...</string>
    <string name="report_success">举报成功</string>
    <string name="report_failed">举报失败, 请稍后再试...</string>
    <string name="downloading">正在下载</string>

    <!-- 登录注册 -->
    <string name="title_activity_login">账号登录</string>
    <string name="title_activity_register">手机注册</string>
    <string name="title_activity_licence">用户协议</string>
    <string name="title_activity_password">密码找回</string>
    <string name="login_user_name_text">账号</string>
    <string name="login_password_text">密码</string>
    <string name="login_button">"登 录"</string>
    <string name="login_forget_password">忘记密码 ？</string>
    <string name="login_use_3rd_account">使用第三方账号登录</string>
    <string name="qq_title">QQ</string>
    <string name="weibo_title">微博</string>
    <string name="weixin_title">微信</string>
    <string name="sign_up">注册</string>
    <string name="enter_account">请输入账号</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_phone_number">请输入手机号</string>
    <string name="enter_validate_code">请输入验证码</string>
    <string name="enter_valid_password">设置密码（6-20个字）</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="nailstar_licence">美甲大咖软件用户协议</string>

    <!-- 设置 -->
    <string name="clear_cache">清除缓存</string>
    <string name="with_no_cache">暂无缓存</string>
    <string name="sure_clear_cache">确定要清除缓存吗？</string>
    <string name="clear_cache_end">清除完毕</string>
    <string name="cache_number">0.00M</string>
    <string name="clear_cache_tip">清除不必要的缓存，为系统节省空间</string>
    <string name="allow_no_wifi_watch">允许非WiFi环境下观看和下载视频</string>
    <string name="not_allow_no_wifi_watch">不允许非WiFi环境下观看和下载视频</string>
    <string name="allow_wifi_watch_tip">非WiFi环境可能产生流量费用</string>
    <string name="version_info">版本信息</string>
    <string name="version_info_number">1.0.0</string>
    <string name="download_folder">下载目录</string>
    <string name="setting_download_folder">设置下载目录</string>
    <string name="download_folder_location">存储卡1</string>
    <string name="i_need_score">我要打分</string>
    <string name="about_us">关于美甲大咖</string>
    <string name="quick_login">退出登录</string>
    <string name="has_been_login_out">已退出登录</string>
    <string name="can_not_find_version_name">版本号没有找到</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_category_list">CategoryListActivity</string>


    <!-- 商城 -->
    <string name="index_commodity_hot_title_text">热卖</string>
    <string name="index_commodity_catetory">商品类别</string>
    <string name="index_commodity_recommend_header_text">商品推荐</string>
    <string name="index_commodity_hot_1_price_unit">¥</string>

    <string name="has_been_reply">已回复</string>
    <string name="title_activity_my_favourite">收藏</string>

    <!-- 内容为空时候显示的提示语句 -->
    <string name="require_lesson_empty">你还没有求过教程</string>
    <string name="require_lesson_empty_tips">不用再苦苦想制作方法啦~"</string>
    <string name="message_empty">暂时没有消息</string>
    <string name="favourite_empty">收藏空空的</string>
    <string name="favourite_empty_tips">把自己想学的教程放进来吧</string>
    <string name="reply_me">回复我的</string>
    <string name="system_message">系统消息</string>
    <string name="reply_other_show_tips">正在回复对方...</string>

</resources>
