<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.yilos.nailstar.index.view.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:orientation="horizontal"
        android:background="@color/orange">
        <ImageButton
            android:layout_width="@dimen/title_bar_icon"
            android:layout_height="@dimen/title_bar_icon"
            android:layout_gravity="center"
            android:id="@+id/backButton"
            android:focusable="false"
            android:background="@color/orange"
            android:src="@mipmap/icon_back_white"
            android:clickable="true"
            android:padding="@dimen/common_10_dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/searctText"
            android:textColor="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_search"
            android:drawablePadding="@dimen/common_10_dp"
            android:hint="@string/search_tip"
            android:textColorHint="@color/white"
            android:imeOptions="actionSearch"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:id="@+id/searchButton"
            android:gravity="center"
            android:padding="@dimen/common_10_dp"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:text="@string/search_text"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/no_relate_video"
        android:visibility="gone"
        android:id="@+id/noRelativeVideoView"/>

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        app:layout_progress="@layout/view_progress"
        android:id="@+id/videoList">
    </com.jude.easyrecyclerview.EasyRecyclerView>
</LinearLayout>
